# Dash

./: .gitignore  CMakeLists.txt  Cargo.toml  GDML.cmake  Main.cs  README.md  commit.bat  fods-bunnygirl-hideout.txt  gdml.csproj  mod.json  test.gdml  test.rs
cli/: Cargo.toml  Main.cs
cli/src/: main.rs
cmake/: FindLibClang.cmake  GDML.cmake
compiler/: Cargo.toml  README.md  build.rs
compiler-v2/: Cargo.toml  DashGrammar  build.rs  dash-grammar.json
compiler-v2/grammar/: dash-grammar.jsonc  decl.jsonc  expr.jsonc  flow.jsonc  include.jsonc  input.keywords.jsonc  lit.jsonc  op.jsonc  type.jsonc
compiler-v2/macros/: Cargo.toml
compiler-v2/macros/src/: lib.rs
compiler-v2/src/: ast.rs  char_iter.rs  grammar.rs  lib.rs  logger.rs  parse.rs  src.rs  tokenizer.rs
compiler-v2/src/checker/: ast.rs  coherency.rs  entity.rs  mod.rs  path.rs  tests.rs  ty.rs
compiler-v2/src/parser/: grammar.rs  mod.rs  parse.rs  tokenizer.rs
compiler-v2/src/shared/: logger.rs  mod.rs  ptr_iter.rs  src.rs  wrappers.rs
compiler/grammar/: flow.jsonc  input.keywords.jsonc  op.jsonc  type.jsonc
compiler/macros/: Cargo.toml
compiler/macros/src/: clause.rs  defs.rs  gen.rs  items.rs  lib.rs  ty.rs  typecheck.rs
compiler/src/: compiler.rs  helpers.rs  lib.rs  main.rs  parser.rs  rules.rs  src.rs
compiler/src/ast/: atom.rs  decl.rs  expr.rs  flow.rs  mod.rs  ops.rs  token.rs  tokens.rs  ty.rs
compiler/src/checker/: coherency.rs  entity.rs  mod.rs  path.rs  pool.rs  resolve.rs  ty.rs
compiler/src/compiler/: coherency.rs  compiler.rs  entity.rs  mod.rs  pool.rs  ty.rs  typecheck.rs  typehelper.rs  visitor.rs
compiler/src/parser/: mod.rs  node.rs  parse.rs  stream.rs  tokenizer.rs
compiler/src/parser/ast/: binop.rs  decls.rs  expr.rs  flow.rs  item.rs  mod.rs  ops.rs  token.rs  ty.rs  unop.rs
compiler/src/shared/: is_none_or.rs  logger.rs  logging.rs  mod.rs  ptr_iter.rs  src.rs  wrappers.rs
include/: GDML.hpp  HotNodeManager.hpp  Std.gdml  macros.hpp  nodes.hpp  shared.hpp
include/lang/: Expr.hpp  Main.hpp  Parser.hpp  Src.hpp  State.hpp  Token.hpp  Type.hpp
lang/Std/: Cocos2d.dash  Cocos2d.gdml  Cocos2d.geo  Cocos2d.gs  IO.dash  IO.gdml  IO.gs  Math.dash  Math.geo  Math.gs  Modify.dash  Modify.gdml  Modify.geo  Modify.gs  React.dash  React.gdml  React.geo  React.gs  Reflect.gdml  Reflect.geo  Reflect.gs
lang/test/: Extern.gdml  Extern.gs  MenuLayer.gdml  MenuLayer.geo  MenuLayer.gs  react.dash  react.gs  test.dash  test.gdml  test.gs
lib/: cocos.gdml
mod/: CMakeLists.txt  mod.json
mod/include/: GDML.hpp  Std.gdml
mod/src/: GDML.cpp  GDMLmath.cpp  HotNodeManager.cpp  main.cpp  nodes.cpp  shared.cpp
mod/src/parse/: GDML.cpp  GDML.hpp  GDMLmath.cpp  HotCpp.cpp  HotCpp.hpp  Managed.cpp  Managed.hpp  shared.cpp  shared.hpp
mod/src/utils/: FileWatcher.hpp  FileWatcherWin.cpp
parser/: Nodes.cs  Parser.cs
src/: GDML.cpp  ast.rs  comptime.rs  error.rs  idea.gdml  interface.rs  main.cpp  main.rs  output.rs  parser.rs  test.cpp  type_.rs  utils.rs
src/cli/: CLI.cpp  CLI.hpp
src/compiler/: Compiler.cpp  Compiler.hpp  Entity.cpp  Entity.hpp  GDML.cpp  GDML.hpp  Instance.cpp  Instance.hpp  Scope.cpp  Type.cpp  Type.hpp  Value.cpp  Value.hpp
src/lang/: Debug.hpp  Expr.cpp  Expr.hpp  Main.cpp  Main.hpp  Parser.cpp  Parser.hpp  Src.cpp  State.cpp  Token.cpp  Type.cpp
src/lang/exprs/: AST.cpp  Decls.cpp  Op.cpp  Types.cpp  Value.cpp
src/parser/: AST.cpp  AST.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp
src/utils/: Error.hpp  IO.cpp  IO.hpp  Macros.hpp  Types.cpp  Types.hpp  about.hpp.in
test/: CMakeLists.txt  MenuLayer.gdml  MyLayer.cpp  MyLayer.gdml  MyLayer.hpp  TestLayer.cpp  TestLayer.hpp  main.cpp  main.gdml  mod.json  new.gdml  std.gdml  test.cpp  test.gdml  testhook.cpp
vscode/: language-configuration.json  package.json
vscode/syntaxes/: dash-grammar.tmLanguage.json  dash.tmLanguage.json  gdml.tmLanguage.json  geo.tmLanguage.json  gs.tmLanguage.json
