[package]
name = "dash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.0"
clap = { version = "3.2.20", features = ["derive"] }
enum-display-derive = "0.1.1"
colored = "2.0.0"
derive-new = "0.5.8"
backtrace = "0.3"
