[package]
name = "dash-compiler-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
unicode-xid = "0.2.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
line-col = "0.2.1"

[build-dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
json_comments = "0.2.2"
