[package]
name = "dash-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
unicode-xid = "0.2.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
line-col = "0.2.1"
colored = "2.1.0"
dash-macros = { path = "macros" }
static_assertions = "1.1.0"
concat-idents = "1.1.5"
as-any = "0.3.1"
